--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --footer-link-color: rgba(255, 255, 255, 0.6);
   --secondary-background-color: #2f303a;
   --third-background-color: #f5f4fa;
+  --modal-text: #212121;
   --indent: 30px;
   --items: 3;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -648,6 +649,7 @@ img {
   height: 581px;
   top: 50%;
   left: 50%;
+  padding: 40px;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -686,6 +688,75 @@ img {
 .overlay-svg {
   width: 18px;
   height: 18px;
+}
+
+/* Modal */
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input {
+  cursor: pointer;
+  margin-bottom: 10px;
+  padding-left: 42px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+
+  height: 40px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--modal-text);
+}
+
+.modal-comment {
+  height: 120px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.modal-text {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--modal-text);
+}
+
+.modal-label-desc {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+
+.modal-comment {
+  padding: 12px 16px;
+  resize: none;
+}
+
+.modal-check {
+}
+
+.modal-label-check-desc {
+  font-size: 14px;
+  line-height: 1.72;
+
+  color: var(--text-color);
+}
+
+.link-policy {
+  color: var(--accent-color);
 }
 /* Benefits */
 
