--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,20 @@ img {
 
 /* General style */
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 *:hover,
 *:focus {
   transition: color var(--duration) var(--timing-function);
@@ -577,6 +591,80 @@ img {
   background-color: var(--accent-color);
 }
 
+.footer-form {
+  margin-left: 93px;
+}
+
+.sigh-up {
+  display: flex;
+  align-items: center;
+}
+
+.footer-form-wrapper {
+  display: block;
+  position: relative;
+}
+
+.footer-form-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.footer-form-input {
+  cursor: pointer;
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.01em;
+  color: var(--white-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+
+  transition: filter var(--duration) var(--timing-function);
+}
+
+.footer-form-input:focus {
+  outline: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.footer-form-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.button-sigh-up {
+  margin-left: 12px;
+  text-align: left;
+  padding-left: 28px;
+}
+
+.footer-button-modal-icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 28px;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+
+  transition: box-shadow var(--duration) var(--timing-function);
+}
+
+.footer-button-modal-icon:hover .footer-button-modal-icon:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
 /* Portfolio */
 
 .portfolio > .section-title {
@@ -681,11 +769,23 @@ img {
   width: 30px;
   height: 30px;
 
-  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.overlay-btn:focus .overlay-svg {
+  fill: var(--accent-color);
+}
+
+.overlay-btn:focus {
+  outline: none;
 }
 
 .overlay-svg {
+  transition: fill var(--duration) var(--timing-function);
+
   width: 18px;
   height: 18px;
 }
@@ -699,10 +799,11 @@ img {
 
 .modal-input {
   cursor: pointer;
-  margin-bottom: 10px;
   padding-left: 42px;
   padding-top: 12px;
   padding-bottom: 12px;
+
+  transition: border var(--duration) var(--timing-function);
 
   height: 40px;
   width: 100%;
@@ -715,11 +816,42 @@ img {
   color: var(--modal-text);
 }
 
+.modal-input:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+}
+
+.modal-input:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+
 .modal-comment {
   height: 120px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  transition: border var(--duration) var(--timing-function);
+
+  padding: 12px 16px;
+  resize: none;
+}
+
+.modal-comment:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+}
+
+.modal-comment::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-text {
@@ -728,6 +860,10 @@ img {
   font-size: 20px;
   line-height: 1.15;
   color: var(--modal-text);
+}
+
+.modal-label {
+  margin-bottom: 10px;
 }
 
 .modal-label-desc {
@@ -740,24 +876,102 @@ img {
   color: var(--text-color);
 }
 
-.modal-comment {
-  padding: 12px 16px;
-  resize: none;
+.modal-icon-wrapper {
+  display: block;
+  position: relative;
 }
 
-.modal-check {
+.modal-icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+
+  transition: fill var(--duration) var(--timing-function);
+
+  width: 18px;
+  height: 18px;
 }
 
-.modal-label-check-desc {
+.modal-label-comment {
+  margin-bottom: 20px;
+}
+
+.checkbox-wrapper {
+  margin-bottom: 30px;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox:checked + .label-checkbox::before {
+  background-color: var(--accent-color);
+  background-image: url(../images/svg/custom-checkbox.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border: 2px solid var(--accent-color);
+}
+
+.label-checkbox {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  transition: background-color var(--duration) var(--timing-function),
+    border var(--duration) var(--timing-function);
+
   font-size: 14px;
-  line-height: 1.72;
+  line-height: 1.71;
 
-  color: var(--text-color);
+  color: #757575;
 }
 
-.link-policy {
-  color: var(--accent-color);
+.label-checkbox::before {
+  display: inline-block;
+  margin-left: 14px;
+  margin-right: 7px;
+  content: "";
+  width: 16px;
+  height: 15px;
+  cursor: pointer;
+
+  border: 2px solid #212121;
+  border-radius: 2px;
 }
+
+.modal-link-policy {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1.71;
+  text-decoration-line: underline;
+
+  color: #2196f3;
+}
+
+.button-modal-submit {
+  transition: box-shadow var(--duration) var(--timing-function);
+}
+
+.button-modal-submit:focus .button-modal-submit:hover {
+  outline: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 /* Benefits */
 
 .benefits-list {
